--- a/styles/styles_main.css
+++ b/styles/styles_main.css
@@ -14,13 +14,30 @@ body {
     height: 100vh;
     padding-top: 35vh;
 }
+.sa-hero {
+  background: url("../img/Cape-Town-South-Africa.jpeg");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh;
+    padding-top: 15vh;
+}
+
+.mo-hero {
+  background: url("../img/morocco-design.jpeg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh;
+    padding-top: 15vh;
+}
 
 .nav-item {
   padding: 0 10px;
 }
 
 .section-heading {
-  border-top: 3px solid #b46b32;
+  /* border-top: 3px solid #b46b32; */
   border-bottom: 3px solid #b46b32;
 }
 
@@ -90,13 +107,17 @@ input[type=text], input[type=email] {
   cursor: pointer;
 }
 
+.testimonials {
+  background: rgba(180,107,50,.30);
+}
+
 /*---------------------------------------------
 ----------------TYPOGRAPHY-------------------*/
 .nav a {
   font-size: 16pt;
   color: #111111;
 }
-.nav a:hover {
+.nav a:hover, a:active {
   color: #b46b32;
 }
 
@@ -106,8 +127,15 @@ h1 blockquote{
   font-weight: 700;
 }
 
+h1 {
+  font-size: 72pt;
+  color: #ffffff;
+  font-weight: 800;
+  text-shadow: 2px 3px 12px rgba(0,0,0,0.5);
+}
+
 h2 {
-  font-size: 56pt;
+  font-size: 46pt;
 }
 h3 {
   font-size: 36pt;
@@ -122,6 +150,22 @@ p {
   font-size: 16pt;
 }
 
+a {
+  color: #b46b32;
+  text-decoration: none;
+}
+a:hover {
+  color: #b46b32;
+  text-decoration: underline;
+}
+
+blockquote {
+  font-size: 18pt;
+  font-style: italic;
+  font-weight: 500;
+}
+
 .light-heading {
   color: #ffffff;
+  text-shadow: 2px 3px 12px rgba(0,0,0,0.5);
 }
